--- a/scss/style.scss
+++ b/scss/style.scss
@@ -346,6 +346,135 @@ body {
 
     }
 
+
+    .contain_item {
+
+
+        // max-width: 1300px;
+        width: 100%;
+        height: min-content;
+        padding: 1rem 2rem;
+
+
+
+        grid-template-columns: repeat(2, 1fr);
+        // background-color: rgb(120, 106, 106);
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        flex-wrap: wrap;
+
+
+        .item {
+
+            box-shadow: -2px 10px 29px -12px rgba(0, 0, 0, 0.75);
+            -webkit-box-shadow: -2px 10px 29px -12px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: -2px 10px 29px -12px rgba(0, 0, 0, 0.75);
+
+            max-width: 400px;
+            width: 100%;
+            height: 200px;
+            // background-color: red;
+            border-radius: 10px;
+
+            position: relative;
+
+            .header {
+
+                width: 100;
+                height: 50px;
+                // background-color: blue;
+
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+
+
+                .left {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    img {
+                        width: 13px;
+                        height: auto;
+
+                    }
+
+                    h1 {
+                        font-size: 15px;
+                        margin-left: 10px;
+                        color: #484848;
+                    }
+
+
+                }
+
+                .right {
+
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    span {
+                        color: #2667FF;
+                    }
+
+                }
+
+            }
+
+            .trajet {
+                padding: 0 3rem;
+
+                width: 100%;
+                height: 60px;
+                // background-color: yellow;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+
+                .tiret {
+
+                    background-color: #484848;
+
+                    max-width: 60px;
+                    width: 100%;
+                    height: 2px;
+
+                }
+
+                .prix_trajet {
+                    max-width: 80px;
+                    width: 100%;
+                    border: none;
+                    outline: none;
+                    background-color: #2667FF;
+                    padding: 5px 10px;
+                    color: white;
+                    border-radius: 5px;
+                    cursor: pointer;
+                }
+
+
+
+
+            }
+
+            .more {
+                position: absolute;
+                bottom: 8%;
+                left: 8%;
+                cursor: pointer;
+            }
+
+        }
+
+
+    }
+
     .vide {
         width: 100%;
         height: 10vh;
